--- a/App/pom.xml
+++ b/App/pom.xml
@@ -20,6 +20,7 @@
         <dependency.locations.enabled>false</dependency.locations.enabled>
         <mainClass>software.app.Runnable</mainClass>
         <log4j.version>2.11.2</log4j.version>
+        <slf4j.version>1.7.26</slf4j.version>
     </properties>
 
     <developers>
@@ -107,6 +108,11 @@
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.4.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>hu.unideb.inf</groupId>
+            <artifactId>maze</artifactId>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
