expand the pom.xml and the Logincontroller.java a little bit

--- a/App/pom.xml
+++ b/App/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>maze</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <profiles>
