--- a/App/src/main/resources/db.properties
+++ b/App/src/main/resources/db.properties
@@ -1,3 +1,3 @@
 db.url = jdbc:oracle:thin:@codd.inf.unideb.hu:1521:ora12c
-db.user =u_dh15mk
-db.password =vilagos
+db.user =u_hcikp7
+db.password =milkacsoki98
